--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <nav></nav>
+        <main></main>
+        <aside></aside>
+        <footer></footer>
+    </body>
 </html>
