--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>WebStudio</title>
     </head>
     <body>
-        <nav><p></p></nav>
+        <header>
+            <a href="">WebStudio</a>
+            <nav>
+                <ul>
+                    <li>Agencja</li>
+                    <li>Portfolio</li>
+                    <li>Kontakt</li>
+                </ul>
+            </nav>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+48 111 111 111">+48 111 111 111</a>
+                </li>
+            </ul>
+        </header>
         <main></main>
-        <aside></aside>
-        <footer></footer>
+        <footer>
+            <a href="">WebStudio</a>
+        </footer>
     </body>
 </html>
