--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,27 +7,108 @@
         <title>WebStudio</title>
     </head>
     <body>
-        <header>
-            <a href="">WebStudio</a>
-            <nav>
+        <div class="wrapper">
+            <header id="top">
+                <a href="">WebStudio</a>
+                <nav>
+                    <ul>
+                        <li><a href="">Agencja</a></li>
+                        <li>Portfolio</li>
+                        <li>Kontakt</li>
+                    </ul>
+                </nav>
                 <ul>
-                    <li>Agencja</li>
-                    <li>Portfolio</li>
-                    <li>Kontakt</li>
+                    <li>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+48111111111">+48 111 111 111</a>
+                    </li>
                 </ul>
-            </nav>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+48 111 111 111">+48 111 111 111</a>
-                </li>
-            </ul>
-        </header>
-        <main></main>
-        <footer>
-            <a href="">WebStudio</a>
-        </footer>
+            </header>
+            <main>
+                <div class="upper">
+                    <p>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</p>
+                    <button type="button">Zamów usługę</button>
+                </div>
+                <div class="atuty">
+                    <ul>
+                        <li>
+                            <h3>Lorem ipsum</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sint itaque velit dolores
+                                aut doloribus incidunt, beatae sapiente officia vitae nam qui numquam. Ad tenetur
+                                consectetur deleniti at qui id.
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Lorem ipsum</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sint itaque velit dolores
+                                aut doloribus incidunt, beatae sapiente officia vitae nam qui numquam. Ad tenetur
+                                consectetur deleniti at qui id.
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Lorem ipsum</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sint itaque velit dolores
+                                aut doloribus incidunt, beatae sapiente officia vitae nam qui numquam. Ad tenetur
+                                consectetur deleniti at qui id.
+                            </p>
+                        </li>
+                        <li>
+                            <h3>Lorem ipsum</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sint itaque velit dolores
+                                aut doloribus incidunt, beatae sapiente officia vitae nam qui numquam. Ad tenetur
+                                consectetur deleniti at qui id.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="about">
+                    <h2>Czym się zajmujemy</h2>
+                    <ul>
+                        <li><img src="/images/box01.jpg" alt="keyboard" width="370px" height="294px" /></li>
+                        <li><img src="/images/box02.jpg" alt="smartfon i laptop" width="370px" height="294px" /></li>
+                        <li><img src="/images/box03.jpg" alt="tablet" width="370px" height="294px" /></li>
+                    </ul>
+                </div>
+                <div class="team">
+                    <h2>Nasz zespół</h2>
+                    <ul>
+                        <li>
+                            <img src="/images/img01.jpg" alt="john1" width="270px" height="260px" />
+                            <h4>John Doe</h4>
+                            <p>Product Designer</p>
+                        </li>
+                        <li>
+                            <img src="/images/img02.jpg" alt="jane1" width="270px" height="260px" />
+                            <h4>Jane Doe</h4>
+                            <p>Frontend Developer</p>
+                        </li>
+                        <li>
+                            <img src="/images/img03.jpg" alt="john2" width="270px" height="260px" />
+                            <h4>John Doe</h4>
+                            <p>Marketing</p>
+                        </li>
+                        <li>
+                            <img src="/images/img04.jpg" alt="john3" width="270px" height="260px" />
+                            <h4>John Doe</h4>
+                            <p>UI Deisgner</p>
+                        </li>
+                    </ul>
+                </div>
+            </main>
+            <footer>
+                <a href="">WebStudio</a>
+                <address>
+                    <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+                    <p>info@example.com</p>
+                    <p>+48 111 111 111</p>
+                </address>
+            </footer>
+        </div>
     </body>
 </html>
