--- a/index.html
+++ b/index.html
@@ -70,31 +70,31 @@
                 <div class="about">
                     <h2>Czym się zajmujemy</h2>
                     <ul>
-                        <li><img src="images/box01.jpg" alt="keyboard" width="370px" height="294px" /></li>
-                        <li><img src="images/box02.jpg" alt="smartfon i laptop" width="370px" height="294px" /></li>
-                        <li><img src="images/box03.jpg" alt="tablet" width="370px" height="294px" /></li>
+                        <li><img src="images/box01.jpg" alt="keyboard" width="370" height="294" /></li>
+                        <li><img src="images/box02.jpg" alt="smartfon i laptop" width="370" height="294" /></li>
+                        <li><img src="images/box03.jpg" alt="tablet" width="370" height="294" /></li>
                     </ul>
                 </div>
                 <div class="team">
                     <h2>Nasz zespół</h2>
                     <ul>
                         <li>
-                            <img src="images/img01.jpg" alt="john1" width="270px" height="260px" />
+                            <img src="images/img01.jpg" alt="john1" width="270" height="260" />
                             <h4>John Doe</h4>
                             <p>Product Designer</p>
                         </li>
                         <li>
-                            <img src="images/img02.jpg" alt="jane1" width="270px" height="260px" />
+                            <img src="images/img02.jpg" alt="jane1" width="270" height="260" />
                             <h4>Jane Doe</h4>
                             <p>Frontend Developer</p>
                         </li>
                         <li>
-                            <img src="images/img03.jpg" alt="john2" width="270px" height="260px" />
+                            <img src="images/img03.jpg" alt="john2" width="270" height="260" />
                             <h4>John Doe</h4>
                             <p>Marketing</p>
                         </li>
                         <li>
-                            <img src="images/img04.jpg" alt="john3" width="270px" height="260px" />
+                            <img src="images/img04.jpg" alt="john3" width="270" height="260" />
                             <h4>John Doe</h4>
                             <p>UI Deisgner</p>
                         </li>
