--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </header>
             <main>
                 <div class="upper">
-                    <p>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</p>
+                    <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
                     <button type="button">Zamów usługę</button>
                 </div>
                 <div class="atuty">
