--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 </ul>
             </header>
             <main>
-                <div class="upper">
+                <section class="upper">
                     <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
                     <button type="button">Zamów usługę</button>
-                </div>
-                <div class="atuty">
+                </section>
+                <section class="atuty">
                     <ul>
                         <li>
                             <h3>Lorem ipsum</h3>
@@ -66,16 +66,16 @@
                             </p>
                         </li>
                     </ul>
-                </div>
-                <div class="about">
+                </section>
+                <section class="about">
                     <h2>Czym się zajmujemy</h2>
                     <ul>
                         <li><img src="images/box01.jpg" alt="keyboard" width="370" height="294" /></li>
                         <li><img src="images/box02.jpg" alt="smartfon i laptop" width="370" height="294" /></li>
                         <li><img src="images/box03.jpg" alt="tablet" width="370" height="294" /></li>
                     </ul>
-                </div>
-                <div class="team">
+                </section>
+                <section class="team">
                     <h2>Nasz zespół</h2>
                     <ul>
                         <li>
@@ -99,7 +99,7 @@
                             <p>UI Deisgner</p>
                         </li>
                     </ul>
-                </div>
+                </section>
             </main>
             <footer>
                 <a href="">WebStudio</a>
