--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <footer>
                 <a href="">WebStudio</a>
                 <address>
-                    <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-                    <p>info@example.com</p>
-                    <p>+48 111 111 111</p>
+                    m. Warszawa, Aleje Jerozolimskie 21 <br />
+                    info@example.com <br />
+                    +48 111 111 111
                 </address>
             </footer>
         </div>
