--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
     </head>
     <body>
         <div class="wrapper">
-            <header id="top">
+            <header>
                 <a href="">WebStudio</a>
                 <nav>
                     <ul>
-                        <li><a href="">Agencja</a></li>
-                        <li>Portfolio</li>
-                        <li>Kontakt</li>
+                        <li><a href="#">Agencja</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Kontakt</a></li>
                     </ul>
                 </nav>
-                <ul>
-                    <li>
-                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+48111111111">+48 111 111 111</a>
-                    </li>
-                </ul>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+48111111111">+48 111 111 111</a>
             </header>
             <main>
                 <section class="upper">
@@ -102,7 +96,7 @@
                 </section>
             </main>
             <footer>
-                <a href="">WebStudio</a>
+                <a href="#">WebStudio</a>
                 <address>
                     m. Warszawa, Aleje Jerozolimskie 21 <br />
                     info@example.com <br />
