--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <main>
                 <!-- 1st section in main-->
                 <section class="upper">
-                    <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+                    <h1>efektywne rozwiązania dla waszego biznesu</h1>
                     <button type="button">Zamów usługę</button>
                 </section>
 
